got rid of extra width on mobile view and fixed input styles

--- a/styles/components/_contact-form.module.scss
+++ b/styles/components/_contact-form.module.scss
@@ -25,6 +25,8 @@
 				border-bottom: px_rem(1) solid $primary-white;
 				background: transparent;
 				transition: border-color 0.2s;
+				border-radius: 0;
+				-webkit-appearance: none;
 				&::placeholder {
 					color: transparent;
 				}
