--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,11 +11,14 @@
 	padding: 0;
 	margin: 0;
 }
+html,
 body {
+	overflow-x: hidden;
+}
+body {
+	position: relative;
 	font-family: "Space Grotesk", sans-serif;
 	background-color: $primary-black;
-	overflow-x: hidden;
-	width: 100vw;
 }
 
 button {
